deploy_kubernetes/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-react
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: spring-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: spring-react
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: spring-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: yleymard/backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8788

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: spring-react
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 8788
      targetPort: 8788
  type: LoadBalancer
  externalIPs: 
    - 192.168.47.150

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: spring-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: yleymard/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: spring-react
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 4000
      targetPort: 4000
  type: LoadBalancer
  externalIPs: 
    - 192.168.47.150
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: spring-react
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.burotopiris.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-app
                port:
                  number: 4000
